fix: autoHeight should show horizontal scroll w/necessary, fixes #2555 (#2556)

--- a/packages/common/src/styles/slick-grid.scss
+++ b/packages/common/src/styles/slick-grid.scss
@@ -66,7 +66,6 @@
   outline: 0;
   position: relative;
   box-sizing: content-box;
-  overflow: hidden;
   width: 100%;
   border-top: var(--slick-container-border-top, v.$slick-container-border-top);
   border-bottom: var(--slick-container-border-bottom, v.$slick-container-border-bottom);
@@ -329,7 +328,6 @@
   }
 
   .slick-viewport {
-    height: 100%;
     overflow: auto;
     border-top: var(--slick-viewport-border-top, v.$slick-viewport-border-top);
     border-bottom: var(--slick-viewport-border-bottom, v.$slick-viewport-border-bottom);
